Disable sticky sidebar on mobile to prevent text overlay

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -335,6 +335,7 @@ a:hover {
     margin-bottom: 2em !important;
     margin-top: 1em !important;
     display: block !important;
+    position: static !important;
   }
 
   .sidebar .author__avatar {
